# truefiles-os

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ExcludesEditor.tsx  FileBrowser.tsx  FileViewer.tsx  RsyncModeSelector.tsx  Sidebar.tsx  SyncProgress.tsx  TagChip.tsx  TagInlineEditor.tsx
src/lib/: types.ts  utils.ts
src/pages/: ConnectionsPage.tsx  DuplicatesPage.tsx  HistoryPage.tsx  SchedulePage.tsx  SyncPage.tsx  TagsPage.tsx  TimeshiftPage.tsx
