[package]
name = "truefiles-os"
version = "0.1.0"
description = "Truefiles OS — visual rsync manager"
authors = ["zenau"]
edition = "2021"

[lib]
name = "truefiles_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xattr = "1"
base64 = "0.22"
